--- a/custom.css
+++ b/custom.css
@@ -121,3 +121,18 @@ img.avatar {
     -moz-border-radius: 8px;
     border-radius: 8px;
 }
+
+/* Custom hamburger menu */
+div.mobile-nav a.toggle{
+    height: 20px;
+    width: 30px;
+    right: 1em;
+    top: 1.1em;
+}
+.mobile-nav .toggle .menu-slice{
+    height: 4px;
+    width: 100%;
+    background-color: silver;
+    margin: 6px 0;
+    border-radius: 4px;
+}
