Updated font colour for date to be lighter.

--- a/custom.css
+++ b/custom.css
@@ -24,7 +24,7 @@ body{
     top: 1em;
     right: 1em;
     background: rgba(2, 2, 2, 0.5);
-    color: silver;
+    color: whitesmoke;
     padding: 0.1em;
 }
 .post-content > div > img{
